Fixing the Elm debugger overlay with a z-index.

--- a/GiraffeApp/ElmApp/public/styles.css
+++ b/GiraffeApp/ElmApp/public/styles.css
@@ -2,6 +2,10 @@
   height: 100vh;
 }
 
+.elm-overlay {
+  z-index: 9999;
+}
+
 .mdl-layout__content {
   padding: 1em;
 }
